<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PokeDetailActivity"
    android:orientation="vertical">
    <!--<androidx.appcompat.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:theme="@style/ToolbarTheme"/>-->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/detail_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/poke_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginRight="@dimen/type_padding"
        android:scaleType="fitCenter"
        android:src="@drawable/monster_ball"
        android:transitionName="poke_image"/>
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="horizontal">-->
        <!--<LinearLayout-->
            <!--android:id="@+id/type_effective"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1">-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/type_effective"-->
                <!--android:layout_gravity="center"-->
                <!--/>-->
        <!--</LinearLayout>-->
        <!--<LinearLayout-->
            <!--android:id="@+id/type_resistant"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:layout_weight="1">-->
            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/type_resistant"-->
                <!--android:layout_gravity="center"/>-->
        <!--</LinearLayout>-->
    <!--</LinearLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="@dimen/type_string_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="効果ばつぐん"
                android:textSize="@dimen/type_text_size"
                android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/type_effective"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <LinearLayout
                android:id="@+id/type_effective2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>


        </LinearLayout>
        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_resistant"
                android:layout_marginTop="@dimen/type_string_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="効果いまひとつ"
                android:textSize="@dimen/type_text_size"
                android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/type_resistant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
            <LinearLayout
                android:id="@+id/type_resistant2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>

            <TextView
                android:id="@+id/text_immune"
                android:layout_marginTop="@dimen/type_string_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/type_text_size"
                android:text="効果なし"
                android:layout_gravity="center"/>
            <LinearLayout
                android:id="@+id/type_immune"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_h"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_a"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_b"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_c"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_d"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_s"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_all"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/chara_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="とくせい"/>
    </LinearLayout>
</LinearLayout>